reference/5.1/Microsoft.PowerShell.Utility/Import-Csv.md
---
external help file: Microsoft.PowerShell.Commands.Utility.dll-Help.xml
keywords: powershell,cmdlet
Locale: en-US
Module Name: Microsoft.PowerShell.Utility
ms.date: 04/23/2019
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.utility/import-csv?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Import-Csv
ms.openlocfilehash: 6d060e0325ba10391f04348178f28b2793fe37fe
ms.sourcegitcommit: 9b28fb9a3d72655bb63f62af18b3a5af6a05cd3f
ms.translationtype: MT
ms.contentlocale: sv-SE
ms.lasthandoff: 07/07/2020
ms.locfileid: "93264981"
---
# <span data-ttu-id="323b3-103">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="323b3-103">Import-Csv</span></span>

## <span data-ttu-id="323b3-104">SAMMANFATTNING</span><span class="sxs-lookup"><span data-stu-id="323b3-104">SYNOPSIS</span></span>
<span data-ttu-id="323b3-105">Skapar tabeller som liknar anpassade objekt från objekten i en fil med kommaavgränsade värden (CSV).</span><span class="sxs-lookup"><span data-stu-id="323b3-105">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

## <span data-ttu-id="323b3-106">SYNTAX</span><span class="sxs-lookup"><span data-stu-id="323b3-106">SYNTAX</span></span>

### <span data-ttu-id="323b3-107">Avgränsare (standard)</span><span class="sxs-lookup"><span data-stu-id="323b3-107">Delimiter (Default)</span></span>

```
Import-Csv [[-Path] <string[]>] [[-Delimiter] <char>] [-LiteralPath <string[]>] [-Header <string[]>]
 [-Encoding <string>] [<CommonParameters>]
```

### <span data-ttu-id="323b3-108">UseCulture</span><span class="sxs-lookup"><span data-stu-id="323b3-108">UseCulture</span></span>

```
Import-Csv [[-Path] <string[]>] -UseCulture [-LiteralPath <string[]>] [-Header <string[]>]
 [-Encoding <string>] [<CommonParameters>]
```

## <span data-ttu-id="323b3-109">BESKRIVNING</span><span class="sxs-lookup"><span data-stu-id="323b3-109">DESCRIPTION</span></span>

<span data-ttu-id="323b3-110">Cmdlet: en `Import-Csv` skapar tabeller som liknar anpassade objekt från objekten i CSV-filer.</span><span class="sxs-lookup"><span data-stu-id="323b3-110">The `Import-Csv` cmdlet creates table-like custom objects from the items in CSV files.</span></span> <span data-ttu-id="323b3-111">Varje kolumn i CSV-filen blir en egenskap för det anpassade objektet och objekten i rader blir egenskaps värden.</span><span class="sxs-lookup"><span data-stu-id="323b3-111">Each column in the CSV file becomes a property of the custom object and the items in rows become the property values.</span></span> <span data-ttu-id="323b3-112">`Import-Csv` fungerar på alla CSV-filer, inklusive filer som genereras av `Export-Csv` cmdleten.</span><span class="sxs-lookup"><span data-stu-id="323b3-112">`Import-Csv` works on any CSV file, including files that are generated by the `Export-Csv` cmdlet.</span></span>

<span data-ttu-id="323b3-113">Du kan använda parametrarna för `Import-Csv` cmdleten för att ange kolumn rubrik raden och objekt avgränsaren, eller direkt `Import-Csv` för att använda List avgränsaren för den aktuella kulturen som objekt avgränsare.</span><span class="sxs-lookup"><span data-stu-id="323b3-113">You can use the parameters of the `Import-Csv` cmdlet to specify the column header row and the item delimiter, or direct `Import-Csv` to use the list separator for the current culture as the item delimiter.</span></span>

<span data-ttu-id="323b3-114">Du kan också använda `ConvertTo-Csv` `ConvertFrom-Csv` cmdletarna och för att konvertera objekt till CSV-strängar (och tillbaka).</span><span class="sxs-lookup"><span data-stu-id="323b3-114">You can also use the `ConvertTo-Csv` and `ConvertFrom-Csv` cmdlets to convert objects to CSV strings (and back).</span></span> <span data-ttu-id="323b3-115">Dessa cmdletar är desamma som `Export-CSV` -och `Import-Csv` -cmdletarna, förutom att de inte behandlar filer.</span><span class="sxs-lookup"><span data-stu-id="323b3-115">These cmdlets are the same as the `Export-CSV` and `Import-Csv` cmdlets, except that they do not deal with files.</span></span>

<span data-ttu-id="323b3-116">Om en rubrik rad post i en CSV-fil innehåller ett tomt värde eller null-värde, infogar PowerShell ett standard rubrik rads namn och visar ett varnings meddelande.</span><span class="sxs-lookup"><span data-stu-id="323b3-116">If a header row entry in a CSV file contains an empty or null value, PowerShell inserts a default header row name and displays a warning message.</span></span>

<span data-ttu-id="323b3-117">`Import-Csv` använder byte-order-markering (BOM) för att identifiera filens kodnings format.</span><span class="sxs-lookup"><span data-stu-id="323b3-117">`Import-Csv` uses the byte-order-mark (BOM) to detect the encoding format of the file.</span></span> <span data-ttu-id="323b3-118">Om filen saknar struktur antas kodningen vara UTF8.</span><span class="sxs-lookup"><span data-stu-id="323b3-118">If the file has no BOM, it assumes the encoding is UTF8.</span></span>

## <span data-ttu-id="323b3-119">EXEMPEL</span><span class="sxs-lookup"><span data-stu-id="323b3-119">EXAMPLES</span></span>

### <span data-ttu-id="323b3-120">Exempel 1: importera process objekt</span><span class="sxs-lookup"><span data-stu-id="323b3-120">Example 1: Import process objects</span></span>

<span data-ttu-id="323b3-121">Det här exemplet visar hur du exporterar och sedan importerar en CSV-fil med process objekt.</span><span class="sxs-lookup"><span data-stu-id="323b3-121">This example shows how to export and then import a CSV file of process objects.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv
$P = Import-Csv -Path .\Processes.csv
$P | Get-Member
```

```Output
   TypeName: System.Management.Automation.PSCustomObject

Name                       MemberType   Definition
----                       ----------   ----------
Equals                     Method       bool Equals(System.Object obj)
GetHashCode                Method       int GetHashCode()
GetType                    Method       type GetType()
ToString                   Method       string ToString()
BasePriority               NoteProperty string BasePriority=8
Company                    NoteProperty string Company=Microsoft Corporation
...
```

```powershell
$P | Format-Table
```

```Output
Name                   SI Handles VM            WS        PM        NPM    Path
----                   -- ------- --            --        --        ---    ----
ApplicationFrameHost   4  407     2199293489152 15884288  15151104  23792  C:\WINDOWS\system32\ApplicationFrameHost.exe
...
wininit                0  157     2199112204288 4591616   1630208   10376
winlogon               4  233     2199125549056 7659520   2826240   10992  C:\WINDOWS\System32\WinLogon.exe
WinStore.App           4  846     873435136     33652736  26607616  55432  C:\Program Files\WindowsApps\Microsoft.WindowsStore_11712.1001.13.0_x64__8weky...
WmiPrvSE               0  201     2199100219392 8830976   3297280   10632  C:\WINDOWS\system32\wbem\wmiprvse.exe
WmiPrvSE               0  407     2199157727232 18509824  12922880  16624  C:\WINDOWS\system32\wbem\wmiprvse.exe
WUDFHost               0  834     2199310204928 51945472  87441408  24984  C:\Windows\System32\WUDFHost.exe
```

<span data-ttu-id="323b3-122">`Get-Process`Cmdleten skickar process objekt nedåt i pipeline till `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="323b3-122">The `Get-Process` cmdlet sends process objects down the pipeline to the `Export-Csv`.</span></span> <span data-ttu-id="323b3-123">`Export-Csv`Cmdleten konverterar process objekt till CSV-strängar och sparar strängarna i Processes.csvs filen.</span><span class="sxs-lookup"><span data-stu-id="323b3-123">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span> <span data-ttu-id="323b3-124">`Import-Csv`Cmdleten importerar CSV-strängarna från Processes.csv-filen.</span><span class="sxs-lookup"><span data-stu-id="323b3-124">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span>
<span data-ttu-id="323b3-125">Strängarna sparas i `$P` variabeln.</span><span class="sxs-lookup"><span data-stu-id="323b3-125">The strings are saved in the `$P` variable.</span></span> <span data-ttu-id="323b3-126">`$P`Variabeln skickas ned pipelinen till den `Get-Member` cmdlet som visar egenskaperna för de importerade CSV-strängarna.</span><span class="sxs-lookup"><span data-stu-id="323b3-126">The `$P` variable is sent down the pipeline to the `Get-Member` cmdlet that displays the properties of the imported CSV strings.</span></span> <span data-ttu-id="323b3-127">`$P`Variabeln skickas ned pipelinen till `Format-Table` cmdleten och visar objekten.</span><span class="sxs-lookup"><span data-stu-id="323b3-127">The `$P` variable is sent down the pipeline to the `Format-Table` cmdlet and displays the objects.</span></span>

### <span data-ttu-id="323b3-128">Exempel 2: Ange avgränsare</span><span class="sxs-lookup"><span data-stu-id="323b3-128">Example 2: Specify the delimiter</span></span>

<span data-ttu-id="323b3-129">Det här exemplet visar hur du använder parametern **delimiter** för `Import-Csv` cmdleten.</span><span class="sxs-lookup"><span data-stu-id="323b3-129">This example shows how to use the **Delimiter** parameter of the `Import-Csv` cmdlet.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv -Delimiter :
$P = Import-Csv -Path .\Processes.csv -Delimiter :
$P | Format-Table
```

<span data-ttu-id="323b3-130">`Get-Process`Cmdleten skickar process objekt nedåt i pipeline till `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="323b3-130">The `Get-Process` cmdlet sends process objects down the pipeline to `Export-Csv`.</span></span> <span data-ttu-id="323b3-131">`Export-Csv`Cmdleten konverterar process objekt till CSV-strängar och sparar strängarna i Processes.csvs filen.</span><span class="sxs-lookup"><span data-stu-id="323b3-131">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span>
<span data-ttu-id="323b3-132">Parametern **delimiter** används för att ange en kolon avgränsare.</span><span class="sxs-lookup"><span data-stu-id="323b3-132">The **Delimiter** parameter is used to specify a colon delimiter.</span></span> <span data-ttu-id="323b3-133">`Import-Csv`Cmdleten importerar CSV-strängarna från Processes.csv-filen.</span><span class="sxs-lookup"><span data-stu-id="323b3-133">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span> <span data-ttu-id="323b3-134">Strängarna sparas i `$P` variabeln.</span><span class="sxs-lookup"><span data-stu-id="323b3-134">The strings are saved in the `$P` variable.</span></span> <span data-ttu-id="323b3-135">Till- `$P` variabeln skickas ned pipelinen till `Format-Table` cmdleten.</span><span class="sxs-lookup"><span data-stu-id="323b3-135">To `$P` variable is sent down the pipeline to the `Format-Table` cmdlet.</span></span>

### <span data-ttu-id="323b3-136">Exempel 3: Ange den aktuella kulturen för avgränsaren</span><span class="sxs-lookup"><span data-stu-id="323b3-136">Example 3: Specify the current culture for the delimiter</span></span>

<span data-ttu-id="323b3-137">Det här exemplet visar hur du använder `Import-Csv` cmdleten med parametern **UseCulture** .</span><span class="sxs-lookup"><span data-stu-id="323b3-137">This example shows how to use the `Import-Csv` cmdlet with the **UseCulture** parameter.</span></span>

```powershell
(Get-Culture).TextInfo.ListSeparator
Get-Process | Export-Csv -Path .\Processes.csv -UseCulture
Import-Csv -Path .\Processes.csv -UseCulture
```

<span data-ttu-id="323b3-138">`Get-Culture`Cmdleten använder de kapslade egenskaperna **Textinfo** och **ListSeparator** för att hämta den aktuella kulturen som är standard för List avgränsare.</span><span class="sxs-lookup"><span data-stu-id="323b3-138">The `Get-Culture` cmdlet uses the nested properties **TextInfo** and **ListSeparator** to get the current culture's default list separator.</span></span> <span data-ttu-id="323b3-139">`Get-Process`Cmdleten skickar process objekt nedåt i pipeline till `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="323b3-139">The `Get-Process` cmdlet sends process objects down the pipeline to `Export-Csv`.</span></span> <span data-ttu-id="323b3-140">`Export-Csv`Cmdleten konverterar process objekt till CSV-strängar och sparar strängarna i Processes.csvs filen.</span><span class="sxs-lookup"><span data-stu-id="323b3-140">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span> <span data-ttu-id="323b3-141">Parametern **UseCulture** använder den aktuella kulturen som standard List avgränsare.</span><span class="sxs-lookup"><span data-stu-id="323b3-141">The **UseCulture** parameter uses the current culture's default list separator.</span></span> <span data-ttu-id="323b3-142">`Import-Csv`Cmdleten importerar CSV-strängarna från Processes.csv-filen.</span><span class="sxs-lookup"><span data-stu-id="323b3-142">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span>

### <span data-ttu-id="323b3-143">Exempel 4: ändra egenskaps namn i ett importerat objekt</span><span class="sxs-lookup"><span data-stu-id="323b3-143">Example 4: Change property names in an imported object</span></span>

<span data-ttu-id="323b3-144">Det här exemplet visar hur du använder parametern **header** i `Import-Csv` för att ändra namn på egenskaper i det resulterande importerade objektet.</span><span class="sxs-lookup"><span data-stu-id="323b3-144">This example shows how to use the **Header** parameter of `Import-Csv` to change the names of properties in the resulting imported object.</span></span>

```powershell
Start-Job -ScriptBlock { Get-Process } | Export-Csv -Path .\Jobs.csv -NoTypeInformation
$Header = 'State', 'MoreData', 'StatusMessage', 'Location', 'Command', 'StateInfo', 'Finished',
  'InstanceId', 'Id', 'Name', 'ChildJobs', 'BeginTime', 'EndTime', 'JobType', 'Output', 'Error',
  'Progress', 'Verbose', 'Debug', 'Warning', 'Information'
# Delete the default header from file
$A = Get-Content -Path .\Jobs.csv
$A = $A[1..($A.Count - 1)]
$A | Out-File -FilePath .\Jobs.csv
$J = Import-Csv -Path .\Jobs.csv -Header $Header
$J
```

```Output
State         : Running
MoreData      : True
StatusMessage :
Location      : localhost
Command       : Get-Process
StateInfo     : Running
Finished      : System.Threading.ManualResetEvent
InstanceId    : a259eb63-6824-4b97-a033-305108ae1c2e
Id            : 1
Name          : Job1
ChildJobs     : System.Collections.Generic.List`1[System.Management.Automation.Job]
BeginTime     : 12/20/2018 18:59:57
EndTime       :
JobType       : BackgroundJob
Output        : System.Management.Automation.PSDataCollection`1[System.Management.Automation.PSObject]
Error         : System.Management.Automation.PSDataCollection`1[System.Management.Automation.ErrorRecord]
Progress      : System.Management.Automation.PSDataCollection`1[System.Management.Automation.ProgressRecord]
Verbose       : System.Management.Automation.PSDataCollection`1[System.Management.Automation.VerboseRecord]
Debug         : System.Management.Automation.PSDataCollection`1[System.Management.Automation.DebugRecord]
Warning       : System.Management.Automation.PSDataCollection`1[System.Management.Automation.WarningRecord]
Information   : System.Management.Automation.PSDataCollection`1[System.Management.Automation.InformationRecord]
```

<span data-ttu-id="323b3-145">`Start-Job`Cmdleten startar ett bakgrunds jobb som kör `Get-Process` .</span><span class="sxs-lookup"><span data-stu-id="323b3-145">The `Start-Job` cmdlet starts a background job that runs `Get-Process`.</span></span> <span data-ttu-id="323b3-146">Ett jobb objekt skickas ned pipelinen till `Export-Csv` cmdleten och konverteras till en CSV-sträng.</span><span class="sxs-lookup"><span data-stu-id="323b3-146">A job object is sent down the pipeline to the `Export-Csv` cmdlet and converted to a CSV string.</span></span> <span data-ttu-id="323b3-147">Parametern **NoTypeInformation** tar bort typ informations huvudet från CSV-utdata och är valfritt i PowerShell Core.</span><span class="sxs-lookup"><span data-stu-id="323b3-147">The **NoTypeInformation** parameter removes the type information header from CSV output and is optional in PowerShell Core.</span></span>
<span data-ttu-id="323b3-148">`$Header`Variabeln innehåller en anpassad rubrik som ersätter följande standardvärden: **HasMoreData** , **JobStateInfo** , **PSBeginTime** , **PSEndTime** och **PSJobTypeName**.</span><span class="sxs-lookup"><span data-stu-id="323b3-148">The `$Header` variable contains a custom header that replaces the following default values: **HasMoreData** , **JobStateInfo** , **PSBeginTime** , **PSEndTime** , and **PSJobTypeName**.</span></span> <span data-ttu-id="323b3-149">`$A`Variabeln använder `Get-Content` cmdleten för att hämta CSV-strängen från Jobs.csv-filen.</span><span class="sxs-lookup"><span data-stu-id="323b3-149">The `$A` variable uses the `Get-Content` cmdlet to get the CSV string from the Jobs.csv file.</span></span> <span data-ttu-id="323b3-150">`$A`Variabeln används för att ta bort standard huvudet från filen.</span><span class="sxs-lookup"><span data-stu-id="323b3-150">The `$A` variable is used to remove the default header from the file.</span></span> <span data-ttu-id="323b3-151">`Out-File`Cmdleten sparar den nya versionen av Jobs.csv-filen i `$A` variabeln.</span><span class="sxs-lookup"><span data-stu-id="323b3-151">The `Out-File` cmdlet saves the new version of the Jobs.csv file in the `$A` variable.</span></span> <span data-ttu-id="323b3-152">`Import-Csv`Cmdleten importerar Jobs.csv-filen och använder parametern **header** för att tillämpa `$Header` variabeln.</span><span class="sxs-lookup"><span data-stu-id="323b3-152">The `Import-Csv` cmdlet imports the Jobs.csv file and uses the **Header** parameter to apply the `$Header` variable.</span></span> <span data-ttu-id="323b3-153">`$J`Variabeln innehåller den importerade **PSCustomObject** och visar objektet i PowerShell-konsolen.</span><span class="sxs-lookup"><span data-stu-id="323b3-153">The `$J` variable contains the imported **PSCustomObject** and displays the object in the PowerShell console.</span></span>

### <span data-ttu-id="323b3-154">Exempel 5: skapa ett anpassat objekt med en CSV-fil</span><span class="sxs-lookup"><span data-stu-id="323b3-154">Example 5: Create a custom object using a CSV file</span></span>

<span data-ttu-id="323b3-155">Det här exemplet visar hur du skapar ett anpassat objekt i PowerShell med hjälp av en CSV-fil.</span><span class="sxs-lookup"><span data-stu-id="323b3-155">This example shows how to create a custom object in PowerShell by using a CSV file.</span></span>

```powershell
Get-Content -Path .\Links.csv
```

```Output
113207,about_Aliases
113208,about_Arithmetic_Operators
113209,about_Arrays
113210,about_Assignment_Operators
113212,about_Automatic_Variables
113213,about_Break
113214,about_Command_Precedence
113215,about_Command_Syntax
144309,about_Comment_Based_Help
113216,about_CommonParameters
113217,about_Comparison_Operators
113218,about_Continue
113219,about_Core_Commands
113220,about_Data_Section
```

```powershell
$A = Import-Csv -Path .\Links.csv -Header 'LinkID', 'TopicTitle'
$A | Get-Member
```

```Output
   TypeName: System.Management.Automation.PSCustomObject

Name        MemberType   Definition
----        ----------   ----------
Equals      Method       bool Equals(System.Object obj)
GetHashCode Method       int GetHashCode()
GetType     Method       type GetType()
ToString    Method       string ToString()
LinkID      NoteProperty string LinkID=113207
TopicTitle  NoteProperty string TopicTitle=about_Aliases
```

```powershell
$A | Where-Object -Property TopicTitle -Like '*alias*'
```

```Output
LinkID TopicTitle
------ ----------
113207 about_Aliases
```

<span data-ttu-id="323b3-156">Använd värdena som visas i utdata om du vill skapa en Links.csv-fil `Get-Content` .</span><span class="sxs-lookup"><span data-stu-id="323b3-156">To create your Links.csv file, use the values shown in the `Get-Content` output.</span></span>

<span data-ttu-id="323b3-157">`Get-Content`Cmdleten visar Links.csv-filen.</span><span class="sxs-lookup"><span data-stu-id="323b3-157">The `Get-Content` cmdlet displays the Links.csv file.</span></span> <span data-ttu-id="323b3-158">`Import-Csv`Cmdleten importerar Links.csv-filen.</span><span class="sxs-lookup"><span data-stu-id="323b3-158">The `Import-Csv` cmdlet imports the Links.csv file.</span></span> <span data-ttu-id="323b3-159">Parametern **header** anger egenskaps namnen **LinkId** och **TopicTitle**.</span><span class="sxs-lookup"><span data-stu-id="323b3-159">The **Header** parameter specifies the property names **LinkId** and **TopicTitle**.</span></span> <span data-ttu-id="323b3-160">Objekten lagras i `$A` variabeln.</span><span class="sxs-lookup"><span data-stu-id="323b3-160">The objects are stored in the `$A` variable.</span></span> <span data-ttu-id="323b3-161">`Get-Member`Cmdleten visar egenskaps namnen från **rubriken** -parametern.</span><span class="sxs-lookup"><span data-stu-id="323b3-161">The `Get-Member` cmdlet shows the property names from the **Header** parameter.</span></span> <span data-ttu-id="323b3-162">`Where-Object`Cmdleten väljer objekt med egenskapen **TopicTitle** som innehåller **alias**.</span><span class="sxs-lookup"><span data-stu-id="323b3-162">The `Where-Object` cmdlet selects objects with the **TopicTitle** property that includes **alias**.</span></span>

### <span data-ttu-id="323b3-163">Exempel 6: importera en CSV-fil som saknar ett värde</span><span class="sxs-lookup"><span data-stu-id="323b3-163">Example 6: Import a CSV that is missing a value</span></span>

<span data-ttu-id="323b3-164">Det här exemplet visar hur `Import-Csv` cmdleten i PowerShell reagerar när rubrik raden i en CSV-fil innehåller ett null-värde eller ett tomt värde.</span><span class="sxs-lookup"><span data-stu-id="323b3-164">This example shows how the `Import-Csv` cmdlet in PowerShell responds when the header row in a CSV file includes a null or empty value.</span></span> <span data-ttu-id="323b3-165">`Import-Csv` ersätter ett standard namn för den saknade rubrik raden som blir egenskaps namnet för det objekt som `Import-Csv` returneras.</span><span class="sxs-lookup"><span data-stu-id="323b3-165">`Import-Csv` substitutes a default name for the missing header row that becomes the property name of the object that `Import-Csv` returns.</span></span>

```powershell
Get-Content -Path .\Projects.csv
```

```Output
ProjectID,ProjectName,,Completed
13,Inventory,Redmond,True
440,,FarEast,True
469,Marketing,Europe,False
```

```powershell
Import-Csv -Path .\Projects.csv
```

```Output
WARNING: One or more headers were not specified. Default names starting with "H" have been used in place of any missing headers.

ProjectID ProjectName H1      Completed
--------- ----------- --      ---------
13        Inventory   Redmond True
440                   FarEast True
469       Marketing   Europe  False
```

```powershell
(Import-Csv -Path .\Projects.csv).H1
```

```Output
WARNING: One or more headers were not specified. Default names starting with "H" have been used in place of any missing headers.
Redmond
FarEast
Europe
```

<span data-ttu-id="323b3-166">Använd värdena som visas i exemplets utdata om du vill skapa en Projects.csv-fil `Get-Content` .</span><span class="sxs-lookup"><span data-stu-id="323b3-166">To create your Projects.csv file, use the values shown in the example's `Get-Content` output.</span></span>

<span data-ttu-id="323b3-167">`Get-Content`Cmdleten visar Projects.csv-filen.</span><span class="sxs-lookup"><span data-stu-id="323b3-167">The `Get-Content` cmdlet displays the Projects.csv file.</span></span> <span data-ttu-id="323b3-168">Rubrik raden saknar ett värde mellan **ProjectName** och **har slutförts**.</span><span class="sxs-lookup"><span data-stu-id="323b3-168">The header row is missing a value between **ProjectName** and **Completed**.</span></span> <span data-ttu-id="323b3-169">`Import-Csv`Cmdleten importerar Projects.csv-filen och visar ett varnings meddelande eftersom **H1** är ett standard huvud namn.</span><span class="sxs-lookup"><span data-stu-id="323b3-169">The `Import-Csv` cmdlet imports the Projects.csv file and displays a warning message because **H1** is a default header name.</span></span> <span data-ttu-id="323b3-170">`(Import-Csv -Path
.\Projects.csv).H1`Kommandot hämtar värdena för **H1** -egenskapen och visar en varning.</span><span class="sxs-lookup"><span data-stu-id="323b3-170">The `(Import-Csv -Path
.\Projects.csv).H1` command gets the **H1** property values and displays a warning.</span></span>

## <span data-ttu-id="323b3-171">PARAMETRAR</span><span class="sxs-lookup"><span data-stu-id="323b3-171">PARAMETERS</span></span>

### <span data-ttu-id="323b3-172">-Avgränsare</span><span class="sxs-lookup"><span data-stu-id="323b3-172">-Delimiter</span></span>

<span data-ttu-id="323b3-173">Anger den avgränsare som separerar egenskapsvärdena i CSV-filen.</span><span class="sxs-lookup"><span data-stu-id="323b3-173">Specifies the delimiter that separates the property values in the CSV file.</span></span>
<span data-ttu-id="323b3-174">Standardvärdet är komma (,).</span><span class="sxs-lookup"><span data-stu-id="323b3-174">The default is a comma (,).</span></span>

<span data-ttu-id="323b3-175">Ange ett tecken, till exempel ett kolon (:).</span><span class="sxs-lookup"><span data-stu-id="323b3-175">Enter a character, such as a colon (:).</span></span>
<span data-ttu-id="323b3-176">Ange ett semikolon (;) omge det med enkla citat tecken.</span><span class="sxs-lookup"><span data-stu-id="323b3-176">To specify a semicolon (;) enclose it in single quotation marks.</span></span>

<span data-ttu-id="323b3-177">Om du anger ett annat tecken än den faktiska sträng avgränsaren i filen, `Import-Csv` kan inte skapa objekten från CSV-strängarna och returnera CSV-strängarna.</span><span class="sxs-lookup"><span data-stu-id="323b3-177">If you specify a character other than the actual string delimiter in the file, `Import-Csv` cannot create the objects from the CSV strings and will return the CSV strings.</span></span>

```yaml
Type: System.Char
Parameter Sets: Delimiter
Aliases:

Required: False
Position: 1
Default value: comma (,)
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="323b3-178">-Encoding</span><span class="sxs-lookup"><span data-stu-id="323b3-178">-Encoding</span></span>

<span data-ttu-id="323b3-179">Anger typ av kodning för mål filen.</span><span class="sxs-lookup"><span data-stu-id="323b3-179">Specifies the type of encoding for the target file.</span></span> <span data-ttu-id="323b3-180">Standardvärdet är `Default`.</span><span class="sxs-lookup"><span data-stu-id="323b3-180">The default value is `Default`.</span></span>

<span data-ttu-id="323b3-181">De acceptabla värdena för den här parametern är följande:</span><span class="sxs-lookup"><span data-stu-id="323b3-181">The acceptable values for this parameter are as follows:</span></span>

- <span data-ttu-id="323b3-182">`ASCII` Använder ASCII-teckenuppsättning (7-bitars).</span><span class="sxs-lookup"><span data-stu-id="323b3-182">`ASCII` Uses ASCII (7-bit) character set.</span></span>
- <span data-ttu-id="323b3-183">`BigEndianUnicode` Använder UTF-16 med big-endian byte-ordningen.</span><span class="sxs-lookup"><span data-stu-id="323b3-183">`BigEndianUnicode` Uses UTF-16 with the big-endian byte order.</span></span>
- <span data-ttu-id="323b3-184">`Default` Använder kodningen som motsvarar systemets aktiva tecken tabell (vanligt vis ANSI).</span><span class="sxs-lookup"><span data-stu-id="323b3-184">`Default` Uses the encoding that corresponds to the system's active code page (usually ANSI).</span></span>
- <span data-ttu-id="323b3-185">`OEM` Använder kodningen som motsvarar systemets aktuella OEM Code-sida.</span><span class="sxs-lookup"><span data-stu-id="323b3-185">`OEM` Uses the encoding that corresponds to the system's current OEM code page.</span></span>
- <span data-ttu-id="323b3-186">`Unicode` Använder UTF-16 med en liten-endian-order.</span><span class="sxs-lookup"><span data-stu-id="323b3-186">`Unicode` Uses UTF-16 with the little-endian byte order.</span></span>
- <span data-ttu-id="323b3-187">`UTF7` Använder UTF-7.</span><span class="sxs-lookup"><span data-stu-id="323b3-187">`UTF7` Uses UTF-7.</span></span>
- <span data-ttu-id="323b3-188">`UTF8` Använder UTF-8.</span><span class="sxs-lookup"><span data-stu-id="323b3-188">`UTF8` Uses UTF-8.</span></span>
- <span data-ttu-id="323b3-189">`UTF32` Använder UTF-32 med en liten-endian-order.</span><span class="sxs-lookup"><span data-stu-id="323b3-189">`UTF32` Uses UTF-32 with the little-endian byte order.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:
Accepted values: ASCII, BigEndianUnicode, Default, OEM, Unicode, UTF7, UTF8, UTF32

Required: False
Position: Named
Default value: Default
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="323b3-190">– Sidhuvud</span><span class="sxs-lookup"><span data-stu-id="323b3-190">-Header</span></span>

<span data-ttu-id="323b3-191">Anger en alternativ kolumn rubrik rad för den importerade filen.</span><span class="sxs-lookup"><span data-stu-id="323b3-191">Specifies an alternate column header row for the imported file.</span></span> <span data-ttu-id="323b3-192">Kolumn rubriken bestämmer de objekts egenskaps namn som skapats av `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="323b3-192">The column header determines the property names of the objects created by `Import-Csv`.</span></span>

<span data-ttu-id="323b3-193">Ange kolumn rubriker som en kommaavgränsad lista.</span><span class="sxs-lookup"><span data-stu-id="323b3-193">Enter column headers as a comma-separated list.</span></span> <span data-ttu-id="323b3-194">Ange inte rubrik strängen inom citat tecken.</span><span class="sxs-lookup"><span data-stu-id="323b3-194">Do not enclose the header string in quotation marks.</span></span> <span data-ttu-id="323b3-195">Omge varje kolumn rubrik med enkla citat tecken.</span><span class="sxs-lookup"><span data-stu-id="323b3-195">Enclose each column header in single quotation marks.</span></span>

<span data-ttu-id="323b3-196">Om du anger färre kolumn rubriker än det finns data kolumner, ignoreras de återstående data kolumnerna.</span><span class="sxs-lookup"><span data-stu-id="323b3-196">If you enter fewer column headers than there are data columns, the remaining data columns are discarded.</span></span> <span data-ttu-id="323b3-197">Om du anger fler kolumn rubriker än det finns data kolumner skapas de ytterligare kolumn rubrikerna med tomma data kolumner.</span><span class="sxs-lookup"><span data-stu-id="323b3-197">If you enter more column headers than there are data columns, the additional column headers are created with empty data columns.</span></span>

<span data-ttu-id="323b3-198">När du använder parametern **header** tar du bort den ursprungliga rubrik raden från CSV-filen.</span><span class="sxs-lookup"><span data-stu-id="323b3-198">When using the **Header** parameter, delete the original header row from the CSV file.</span></span> <span data-ttu-id="323b3-199">Annars `Import-Csv` skapar ett extra objekt från objekten i rubrik raden.</span><span class="sxs-lookup"><span data-stu-id="323b3-199">Otherwise, `Import-Csv` creates an extra object from the items in the header row.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="323b3-200">-LiteralPath</span><span class="sxs-lookup"><span data-stu-id="323b3-200">-LiteralPath</span></span>

<span data-ttu-id="323b3-201">Anger sökvägen till den CSV-fil som ska importeras.</span><span class="sxs-lookup"><span data-stu-id="323b3-201">Specifies the path to the CSV file to import.</span></span> <span data-ttu-id="323b3-202">Till skillnad från **sökväg** används värdet för parametern **LiteralPath** exakt som det har angetts.</span><span class="sxs-lookup"><span data-stu-id="323b3-202">Unlike **Path** , the value of the **LiteralPath** parameter is used exactly as it is typed.</span></span> <span data-ttu-id="323b3-203">Inga tecken tolkas som jokertecken.</span><span class="sxs-lookup"><span data-stu-id="323b3-203">No characters are interpreted as wildcards.</span></span> <span data-ttu-id="323b3-204">Om sökvägen innehåller escape-tecken omger du den med enkla citat tecken.</span><span class="sxs-lookup"><span data-stu-id="323b3-204">If the path includes escape characters, enclose it in single quotation marks.</span></span> <span data-ttu-id="323b3-205">Enkla citat tecken säger att PowerShell inte tolkar några tecken som escape-sekvenser.</span><span class="sxs-lookup"><span data-stu-id="323b3-205">Single quotation marks tell PowerShell not to interpret any characters as escape sequences.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases: PSPath

Required: False
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="323b3-206">-Path</span><span class="sxs-lookup"><span data-stu-id="323b3-206">-Path</span></span>

<span data-ttu-id="323b3-207">Anger sökvägen till den CSV-fil som ska importeras.</span><span class="sxs-lookup"><span data-stu-id="323b3-207">Specifies the path to the CSV file to import.</span></span>
<span data-ttu-id="323b3-208">Du kan också skicka en sökväg till `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="323b3-208">You can also pipe a path to `Import-Csv`.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: 0
Default value: None
Accept pipeline input: True (ByValue)
Accept wildcard characters: False
```

### <span data-ttu-id="323b3-209">-UseCulture</span><span class="sxs-lookup"><span data-stu-id="323b3-209">-UseCulture</span></span>

<span data-ttu-id="323b3-210">Använder list avgränsaren för den aktuella kulturen som objekt avgränsare.</span><span class="sxs-lookup"><span data-stu-id="323b3-210">Uses the list separator for the current culture as the item delimiter.</span></span> <span data-ttu-id="323b3-211">Använd följande kommando för att hitta List avgränsaren för en kultur: `(Get-Culture).TextInfo.ListSeparator` .</span><span class="sxs-lookup"><span data-stu-id="323b3-211">To find the list separator for a culture, use the following command: `(Get-Culture).TextInfo.ListSeparator`.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: UseCulture
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="323b3-212">CommonParameters</span><span class="sxs-lookup"><span data-stu-id="323b3-212">CommonParameters</span></span>

<span data-ttu-id="323b3-213">Denna cmdlet har stöd för parametrarna -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction och -WarningVariable.</span><span class="sxs-lookup"><span data-stu-id="323b3-213">This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable.</span></span> <span data-ttu-id="323b3-214">Mer information finns i [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span><span class="sxs-lookup"><span data-stu-id="323b3-214">For more information, see [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span></span>

## <span data-ttu-id="323b3-215">INDATA</span><span class="sxs-lookup"><span data-stu-id="323b3-215">INPUTS</span></span>

### <span data-ttu-id="323b3-216">System. String</span><span class="sxs-lookup"><span data-stu-id="323b3-216">System.String</span></span>

<span data-ttu-id="323b3-217">Du kan skicka vidare en sträng som innehåller en sökväg till `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="323b3-217">You can pipe a string that contains a path to `Import-Csv`.</span></span>

## <span data-ttu-id="323b3-218">UTDATA</span><span class="sxs-lookup"><span data-stu-id="323b3-218">OUTPUTS</span></span>

### <span data-ttu-id="323b3-219">Objekt</span><span class="sxs-lookup"><span data-stu-id="323b3-219">Object</span></span>

<span data-ttu-id="323b3-220">Denna cmdlet returnerar de objekt som beskrivs av innehållet i CSV-filen.</span><span class="sxs-lookup"><span data-stu-id="323b3-220">This cmdlet returns the objects described by the content in the CSV file.</span></span>

## <span data-ttu-id="323b3-221">ANTECKNINGAR</span><span class="sxs-lookup"><span data-stu-id="323b3-221">NOTES</span></span>

<span data-ttu-id="323b3-222">Eftersom de importerade objekten är CSV-versioner av objekt typen känns de inte igen och formateras inte av de PowerShell-typer som formaterar icke-CSV-versioner av objekt typen.</span><span class="sxs-lookup"><span data-stu-id="323b3-222">Because the imported objects are CSV versions of the object type, they are not recognized and formatted by the PowerShell type formatting entries that format the non-CSV versions of the object type.</span></span>

<span data-ttu-id="323b3-223">Resultatet av ett `Import-Csv` kommando är en samling strängar som utgör ett tabell liknande anpassade objekt.</span><span class="sxs-lookup"><span data-stu-id="323b3-223">The result of an `Import-Csv` command is a collection of strings that form a table-like custom object.</span></span> <span data-ttu-id="323b3-224">Varje rad är en separat sträng, så du kan använda egenskapen **Count** för objektet för att räkna tabell rader.</span><span class="sxs-lookup"><span data-stu-id="323b3-224">Each row is a separate string, so you can use the **Count** property of the object to count the table rows.</span></span> <span data-ttu-id="323b3-225">Kolumnerna är egenskaperna för objektet och objekten i raderna är egenskapsvärdena.</span><span class="sxs-lookup"><span data-stu-id="323b3-225">The columns are the properties of the object and items in the rows are the property values.</span></span>

<span data-ttu-id="323b3-226">Kolumn rubrik raden bestämmer antalet kolumner och kolumn namnen.</span><span class="sxs-lookup"><span data-stu-id="323b3-226">The column header row determines the number of columns and the column names.</span></span> <span data-ttu-id="323b3-227">Kolumn namnen är också namnen på objektets egenskaper.</span><span class="sxs-lookup"><span data-stu-id="323b3-227">The column names are also the names of the properties of the objects.</span></span> <span data-ttu-id="323b3-228">Den första raden tolkas som kolumn rubriker, om du inte använder parametern **header** för att ange kolumn rubriker.</span><span class="sxs-lookup"><span data-stu-id="323b3-228">The first row is interpreted to be the column headers, unless you use the **Header** parameter to specify column headers.</span></span> <span data-ttu-id="323b3-229">Om en rad har fler värden än rubrik raden ignoreras de ytterligare värdena.</span><span class="sxs-lookup"><span data-stu-id="323b3-229">If any row has more values than the header row, the additional values are ignored.</span></span>

<span data-ttu-id="323b3-230">Om kolumn rubrik raden saknar ett värde eller innehåller ett värde som är null eller tomt, `Import-Csv` använder **H** följt av ett tal för kolumn rubriken och egenskaps namnet som saknas.</span><span class="sxs-lookup"><span data-stu-id="323b3-230">If the column header row is missing a value or contains a null or empty value, `Import-Csv` uses **H** followed by a number for the missing column header and property name.</span></span>

<span data-ttu-id="323b3-231">I CSV-filen representeras varje objekt av en kommaavgränsad lista med objektets egenskaps värden.</span><span class="sxs-lookup"><span data-stu-id="323b3-231">In the CSV file, each object is represented by a comma-separated list of the property values of the object.</span></span> <span data-ttu-id="323b3-232">Egenskapsvärdena konverteras till strängar med hjälp av metoden **toString ()** för objektet, så att de representeras av namnet på egenskap svärdet.</span><span class="sxs-lookup"><span data-stu-id="323b3-232">The property values are converted to strings by using the **ToString()** method of the object, so they are represented by the name of the property value.</span></span> <span data-ttu-id="323b3-233">`Export-Csv` exporterar inte objektets metoder.</span><span class="sxs-lookup"><span data-stu-id="323b3-233">`Export-Csv` does not export the methods of the object.</span></span>

## <span data-ttu-id="323b3-234">RELATERADE LÄNKAR</span><span class="sxs-lookup"><span data-stu-id="323b3-234">RELATED LINKS</span></span>

[<span data-ttu-id="323b3-235">ConvertFrom-CSV</span><span class="sxs-lookup"><span data-stu-id="323b3-235">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)

[<span data-ttu-id="323b3-236">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="323b3-236">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)

[<span data-ttu-id="323b3-237">Exportera-CSV</span><span class="sxs-lookup"><span data-stu-id="323b3-237">Export-Csv</span></span>](Export-Csv.md)

[<span data-ttu-id="323b3-238">Get-Culture</span><span class="sxs-lookup"><span data-stu-id="323b3-238">Get-Culture</span></span>](Get-Culture.md)
