reference/7.0/Microsoft.PowerShell.Utility/Import-Csv.md
---
external help file: Microsoft.PowerShell.Commands.Utility.dll-Help.xml
keywords: powershell,cmdlet
Locale: en-US
Module Name: Microsoft.PowerShell.Utility
ms.date: 1/8/2019
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.utility/import-csv?view=powershell-7&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Import-Csv
ms.openlocfilehash: 6c738c11aaa5131cef0ad0457dc50b376152c1f0
ms.sourcegitcommit: de63e9481cf8024883060aae61fb02c59c2de662
ms.translationtype: MT
ms.contentlocale: sv-SE
ms.lasthandoff: 07/03/2020
ms.locfileid: "93262784"
---
# <span data-ttu-id="07e27-103">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="07e27-103">Import-Csv</span></span>

## <span data-ttu-id="07e27-104">SAMMANFATTNING</span><span class="sxs-lookup"><span data-stu-id="07e27-104">SYNOPSIS</span></span>
<span data-ttu-id="07e27-105">Skapar tabeller som liknar anpassade objekt från objekten i en fil med kommaavgränsade värden (CSV).</span><span class="sxs-lookup"><span data-stu-id="07e27-105">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

## <span data-ttu-id="07e27-106">SYNTAX</span><span class="sxs-lookup"><span data-stu-id="07e27-106">SYNTAX</span></span>

### <span data-ttu-id="07e27-107">DelimiterPath (standard)</span><span class="sxs-lookup"><span data-stu-id="07e27-107">DelimiterPath (Default)</span></span>

```
Import-Csv [[-Delimiter] <Char>] [-Path] <String[]> [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

### <span data-ttu-id="07e27-108">DelimiterLiteralPath</span><span class="sxs-lookup"><span data-stu-id="07e27-108">DelimiterLiteralPath</span></span>

```
Import-Csv [[-Delimiter] <Char>] -LiteralPath <String[]> [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

### <span data-ttu-id="07e27-109">CulturePath</span><span class="sxs-lookup"><span data-stu-id="07e27-109">CulturePath</span></span>

```
Import-Csv [-Path] <String[]> -UseCulture [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

### <span data-ttu-id="07e27-110">CultureLiteralPath</span><span class="sxs-lookup"><span data-stu-id="07e27-110">CultureLiteralPath</span></span>

```
Import-Csv -LiteralPath <String[]> -UseCulture [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

## <span data-ttu-id="07e27-111">BESKRIVNING</span><span class="sxs-lookup"><span data-stu-id="07e27-111">DESCRIPTION</span></span>

<span data-ttu-id="07e27-112">Cmdlet: en `Import-Csv` skapar tabeller som liknar anpassade objekt från objekten i CSV-filer.</span><span class="sxs-lookup"><span data-stu-id="07e27-112">The `Import-Csv` cmdlet creates table-like custom objects from the items in CSV files.</span></span> <span data-ttu-id="07e27-113">Varje kolumn i CSV-filen blir en egenskap för det anpassade objektet och objekten i rader blir egenskaps värden.</span><span class="sxs-lookup"><span data-stu-id="07e27-113">Each column in the CSV file becomes a property of the custom object and the items in rows become the property values.</span></span> <span data-ttu-id="07e27-114">`Import-Csv` fungerar på alla CSV-filer, inklusive filer som genereras av `Export-Csv` cmdleten.</span><span class="sxs-lookup"><span data-stu-id="07e27-114">`Import-Csv` works on any CSV file, including files that are generated by the `Export-Csv` cmdlet.</span></span>

<span data-ttu-id="07e27-115">Du kan använda parametrarna för `Import-Csv` cmdleten för att ange kolumn rubrik raden och objekt avgränsaren, eller direkt `Import-Csv` för att använda List avgränsaren för den aktuella kulturen som objekt avgränsare.</span><span class="sxs-lookup"><span data-stu-id="07e27-115">You can use the parameters of the `Import-Csv` cmdlet to specify the column header row and the item delimiter, or direct `Import-Csv` to use the list separator for the current culture as the item delimiter.</span></span>

<span data-ttu-id="07e27-116">Du kan också använda `ConvertTo-Csv` `ConvertFrom-Csv` cmdletarna och för att konvertera objekt till CSV-strängar (och tillbaka).</span><span class="sxs-lookup"><span data-stu-id="07e27-116">You can also use the `ConvertTo-Csv` and `ConvertFrom-Csv` cmdlets to convert objects to CSV strings (and back).</span></span> <span data-ttu-id="07e27-117">Dessa cmdletar är desamma som `Export-CSV` -och `Import-Csv` -cmdletarna, förutom att de inte behandlar filer.</span><span class="sxs-lookup"><span data-stu-id="07e27-117">These cmdlets are the same as the `Export-CSV` and `Import-Csv` cmdlets, except that they do not deal with files.</span></span>

<span data-ttu-id="07e27-118">Om en rubrik rad post i en CSV-fil innehåller ett tomt värde eller null-värde, infogar PowerShell ett standard rubrik rads namn och visar ett varnings meddelande.</span><span class="sxs-lookup"><span data-stu-id="07e27-118">If a header row entry in a CSV file contains an empty or null value, PowerShell inserts a default header row name and displays a warning message.</span></span>

<span data-ttu-id="07e27-119">Från och med PowerShell 6,0 `Import-Csv` stöder nu utökat logg fils format för W3C.</span><span class="sxs-lookup"><span data-stu-id="07e27-119">Starting with PowerShell 6.0, `Import-Csv` now supports the W3C Extended Log File Format.</span></span>

## <span data-ttu-id="07e27-120">EXEMPEL</span><span class="sxs-lookup"><span data-stu-id="07e27-120">EXAMPLES</span></span>

### <span data-ttu-id="07e27-121">Exempel 1: importera process objekt</span><span class="sxs-lookup"><span data-stu-id="07e27-121">Example 1: Import process objects</span></span>

<span data-ttu-id="07e27-122">Det här exemplet visar hur du exporterar och sedan importerar en CSV-fil med process objekt.</span><span class="sxs-lookup"><span data-stu-id="07e27-122">This example shows how to export and then import a CSV file of process objects.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv
$P = Import-Csv -Path .\Processes.csv
$P | Get-Member
```

```Output
   TypeName: System.Management.Automation.PSCustomObject

Name                       MemberType   Definition
----                       ----------   ----------
Equals                     Method       bool Equals(System.Object obj)
GetHashCode                Method       int GetHashCode()
GetType                    Method       type GetType()
ToString                   Method       string ToString()
BasePriority               NoteProperty string BasePriority=8
Company                    NoteProperty string Company=Microsoft Corporation
...
```

```powershell
$P | Format-Table
```

```Output
Name                   SI Handles VM            WS        PM        NPM    Path
----                   -- ------- --            --        --        ---    ----
ApplicationFrameHost   4  407     2199293489152 15884288  15151104  23792  C:\WINDOWS\system32\ApplicationFrameHost.exe
...
wininit                0  157     2199112204288 4591616   1630208   10376
winlogon               4  233     2199125549056 7659520   2826240   10992  C:\WINDOWS\System32\WinLogon.exe
WinStore.App           4  846     873435136     33652736  26607616  55432  C:\Program Files\WindowsApps\Microsoft.WindowsStore_11712.1001.13.0_x64__8weky...
WmiPrvSE               0  201     2199100219392 8830976   3297280   10632  C:\WINDOWS\system32\wbem\wmiprvse.exe
WmiPrvSE               0  407     2199157727232 18509824  12922880  16624  C:\WINDOWS\system32\wbem\wmiprvse.exe
WUDFHost               0  834     2199310204928 51945472  87441408  24984  C:\Windows\System32\WUDFHost.exe
```

<span data-ttu-id="07e27-123">`Get-Process`Cmdleten skickar process objekt nedåt i pipeline till `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="07e27-123">The `Get-Process` cmdlet sends process objects down the pipeline to the `Export-Csv`.</span></span> <span data-ttu-id="07e27-124">`Export-Csv`Cmdleten konverterar process objekt till CSV-strängar och sparar strängarna i Processes.csvs filen.</span><span class="sxs-lookup"><span data-stu-id="07e27-124">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span> <span data-ttu-id="07e27-125">`Import-Csv`Cmdleten importerar CSV-strängarna från Processes.csv-filen.</span><span class="sxs-lookup"><span data-stu-id="07e27-125">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span>
<span data-ttu-id="07e27-126">Strängarna sparas i `$P` variabeln.</span><span class="sxs-lookup"><span data-stu-id="07e27-126">The strings are saved in the `$P` variable.</span></span> <span data-ttu-id="07e27-127">`$P`Variabeln skickas ned pipelinen till den `Get-Member` cmdlet som visar egenskaperna för de importerade CSV-strängarna.</span><span class="sxs-lookup"><span data-stu-id="07e27-127">The `$P` variable is sent down the pipeline to the `Get-Member` cmdlet that displays the properties of the imported CSV strings.</span></span> <span data-ttu-id="07e27-128">`$P`Variabeln skickas ned pipelinen till `Format-Table` cmdleten och visar objekten.</span><span class="sxs-lookup"><span data-stu-id="07e27-128">The `$P` variable is sent down the pipeline to the `Format-Table` cmdlet and displays the objects.</span></span>

### <span data-ttu-id="07e27-129">Exempel 2: Ange avgränsare</span><span class="sxs-lookup"><span data-stu-id="07e27-129">Example 2: Specify the delimiter</span></span>

<span data-ttu-id="07e27-130">Det här exemplet visar hur du använder parametern **delimiter** för `Import-Csv` cmdleten.</span><span class="sxs-lookup"><span data-stu-id="07e27-130">This example shows how to use the **Delimiter** parameter of the `Import-Csv` cmdlet.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv -Delimiter :
$P = Import-Csv -Path .\Processes.csv -Delimiter :
$P | Format-Table
```

<span data-ttu-id="07e27-131">`Get-Process`Cmdleten skickar process objekt nedåt i pipeline till `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="07e27-131">The `Get-Process` cmdlet sends process objects down the pipeline to `Export-Csv`.</span></span> <span data-ttu-id="07e27-132">`Export-Csv`Cmdleten konverterar process objekt till CSV-strängar och sparar strängarna i Processes.csvs filen.</span><span class="sxs-lookup"><span data-stu-id="07e27-132">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span>
<span data-ttu-id="07e27-133">Parametern **delimiter** används för att ange en kolon avgränsare.</span><span class="sxs-lookup"><span data-stu-id="07e27-133">The **Delimiter** parameter is used to specify a colon delimiter.</span></span> <span data-ttu-id="07e27-134">`Import-Csv`Cmdleten importerar CSV-strängarna från Processes.csv-filen.</span><span class="sxs-lookup"><span data-stu-id="07e27-134">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span> <span data-ttu-id="07e27-135">Strängarna sparas i `$P` variabeln.</span><span class="sxs-lookup"><span data-stu-id="07e27-135">The strings are saved in the `$P` variable.</span></span> <span data-ttu-id="07e27-136">Till- `$P` variabeln skickas ned pipelinen till `Format-Table` cmdleten.</span><span class="sxs-lookup"><span data-stu-id="07e27-136">To `$P` variable is sent down the pipeline to the `Format-Table` cmdlet.</span></span>

### <span data-ttu-id="07e27-137">Exempel 3: Ange den aktuella kulturen för avgränsaren</span><span class="sxs-lookup"><span data-stu-id="07e27-137">Example 3: Specify the current culture for the delimiter</span></span>

<span data-ttu-id="07e27-138">Det här exemplet visar hur du använder `Import-Csv` cmdleten med parametern **UseCulture** .</span><span class="sxs-lookup"><span data-stu-id="07e27-138">This example shows how to use the `Import-Csv` cmdlet with the **UseCulture** parameter.</span></span>

```powershell
(Get-Culture).TextInfo.ListSeparator
Get-Process | Export-Csv -Path .\Processes.csv -UseCulture
Import-Csv -Path .\Processes.csv -UseCulture
```

<span data-ttu-id="07e27-139">`Get-Culture`Cmdleten använder de kapslade egenskaperna **Textinfo** och **ListSeparator** för att hämta den aktuella kulturen som är standard för List avgränsare.</span><span class="sxs-lookup"><span data-stu-id="07e27-139">The `Get-Culture` cmdlet uses the nested properties **TextInfo** and **ListSeparator** to get the current culture's default list separator.</span></span> <span data-ttu-id="07e27-140">`Get-Process`Cmdleten skickar process objekt nedåt i pipeline till `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="07e27-140">The `Get-Process` cmdlet sends process objects down the pipeline to `Export-Csv`.</span></span> <span data-ttu-id="07e27-141">`Export-Csv`Cmdleten konverterar process objekt till CSV-strängar och sparar strängarna i Processes.csvs filen.</span><span class="sxs-lookup"><span data-stu-id="07e27-141">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span> <span data-ttu-id="07e27-142">Parametern **UseCulture** använder den aktuella kulturen som standard List avgränsare.</span><span class="sxs-lookup"><span data-stu-id="07e27-142">The **UseCulture** parameter uses the current culture's default list separator.</span></span> <span data-ttu-id="07e27-143">`Import-Csv`Cmdleten importerar CSV-strängarna från Processes.csv-filen.</span><span class="sxs-lookup"><span data-stu-id="07e27-143">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span>

### <span data-ttu-id="07e27-144">Exempel 4: ändra egenskaps namn i ett importerat objekt</span><span class="sxs-lookup"><span data-stu-id="07e27-144">Example 4: Change property names in an imported object</span></span>

<span data-ttu-id="07e27-145">Det här exemplet visar hur du använder parametern **header** i `Import-Csv` för att ändra namn på egenskaper i det resulterande importerade objektet.</span><span class="sxs-lookup"><span data-stu-id="07e27-145">This example shows how to use the **Header** parameter of `Import-Csv` to change the names of properties in the resulting imported object.</span></span>

```powershell
Start-Job -ScriptBlock { Get-Process } | Export-Csv -Path .\Jobs.csv -NoTypeInformation
$Header = 'State', 'MoreData', 'StatusMessage', 'Location', 'Command', 'StateInfo', 'Finished', 'InstanceId', 'Id', 'Name', 'ChildJobs', 'BeginTime', 'EndTime', 'JobType', 'Output', 'Error', 'Progress', 'Verbose', 'Debug', 'Warning', 'Information'
# Delete the default header from file
$A = Get-Content -Path .\Jobs.csv
$A = $A[1..($A.Count - 1)]
$A | Out-File -FilePath .\Jobs.csv
$J = Import-Csv -Path .\Jobs.csv -Header $Header
$J
```

```Output
State         : Running
MoreData      : True
StatusMessage :
Location      : localhost
Command       : Get-Process
StateInfo     : Running
Finished      : System.Threading.ManualResetEvent
InstanceId    : a259eb63-6824-4b97-a033-305108ae1c2e
Id            : 1
Name          : Job1
ChildJobs     : System.Collections.Generic.List`1[System.Management.Automation.Job]
BeginTime     : 12/20/2018 18:59:57
EndTime       :
JobType       : BackgroundJob
Output        : System.Management.Automation.PSDataCollection`1[System.Management.Automation.PSObject]
Error         : System.Management.Automation.PSDataCollection`1[System.Management.Automation.ErrorRecord]
Progress      : System.Management.Automation.PSDataCollection`1[System.Management.Automation.ProgressRecord]
Verbose       : System.Management.Automation.PSDataCollection`1[System.Management.Automation.VerboseRecord]
Debug         : System.Management.Automation.PSDataCollection`1[System.Management.Automation.DebugRecord]
Warning       : System.Management.Automation.PSDataCollection`1[System.Management.Automation.WarningRecord]
Information   : System.Management.Automation.PSDataCollection`1[System.Management.Automation.InformationRecord]
```

<span data-ttu-id="07e27-146">`Start-Job`Cmdleten startar ett bakgrunds jobb som kör `Get-Process` .</span><span class="sxs-lookup"><span data-stu-id="07e27-146">The `Start-Job` cmdlet starts a background job that runs `Get-Process`.</span></span> <span data-ttu-id="07e27-147">Ett jobb objekt skickas ned pipelinen till `Export-Csv` cmdleten och konverteras till en CSV-sträng.</span><span class="sxs-lookup"><span data-stu-id="07e27-147">A job object is sent down the pipeline to the `Export-Csv` cmdlet and converted to a CSV string.</span></span> <span data-ttu-id="07e27-148">Parametern **NoTypeInformation** tar bort typ informations huvudet från CSV-utdata och är valfritt i PowerShell Core.</span><span class="sxs-lookup"><span data-stu-id="07e27-148">The **NoTypeInformation** parameter removes the type information header from CSV output and is optional in PowerShell Core.</span></span>
<span data-ttu-id="07e27-149">`$Header`Variabeln innehåller en anpassad rubrik som ersätter följande standardvärden: **HasMoreData** , **JobStateInfo** , **PSBeginTime** , **PSEndTime** och **PSJobTypeName**.</span><span class="sxs-lookup"><span data-stu-id="07e27-149">The `$Header` variable contains a custom header that replaces the following default values: **HasMoreData** , **JobStateInfo** , **PSBeginTime** , **PSEndTime** , and **PSJobTypeName**.</span></span> <span data-ttu-id="07e27-150">`$A`Variabeln använder `Get-Content` cmdleten för att hämta CSV-strängen från Jobs.csv-filen.</span><span class="sxs-lookup"><span data-stu-id="07e27-150">The `$A` variable uses the `Get-Content` cmdlet to get the CSV string from the Jobs.csv file.</span></span> <span data-ttu-id="07e27-151">`$A`Variabeln används för att ta bort standard huvudet från filen.</span><span class="sxs-lookup"><span data-stu-id="07e27-151">The `$A` variable is used to remove the default header from the file.</span></span> <span data-ttu-id="07e27-152">`Out-File`Cmdleten sparar den nya versionen av Jobs.csv-filen i `$A` variabeln.</span><span class="sxs-lookup"><span data-stu-id="07e27-152">The `Out-File` cmdlet saves the new version of the Jobs.csv file in the `$A` variable.</span></span> <span data-ttu-id="07e27-153">`Import-Csv`Cmdleten importerar Jobs.csv-filen och använder parametern **header** för att tillämpa `$Header` variabeln.</span><span class="sxs-lookup"><span data-stu-id="07e27-153">The `Import-Csv` cmdlet imports the Jobs.csv file and uses the **Header** parameter to apply the `$Header` variable.</span></span> <span data-ttu-id="07e27-154">`$J`Variabeln innehåller den importerade **PSCustomObject** och visar objektet i PowerShell-konsolen.</span><span class="sxs-lookup"><span data-stu-id="07e27-154">The `$J` variable contains the imported **PSCustomObject** and displays the object in the PowerShell console.</span></span>

### <span data-ttu-id="07e27-155">Exempel 5: skapa ett anpassat objekt med en CSV-fil</span><span class="sxs-lookup"><span data-stu-id="07e27-155">Example 5: Create a custom object using a CSV file</span></span>

<span data-ttu-id="07e27-156">Det här exemplet visar hur du skapar ett anpassat objekt i PowerShell med hjälp av en CSV-fil.</span><span class="sxs-lookup"><span data-stu-id="07e27-156">This example shows how to create a custom object in PowerShell by using a CSV file.</span></span>

```powershell
Get-Content -Path .\Links.csv
```

```Output
113207,about_Aliases
113208,about_Arithmetic_Operators
113209,about_Arrays
113210,about_Assignment_Operators
113212,about_Automatic_Variables
113213,about_Break
113214,about_Command_Precedence
113215,about_Command_Syntax
144309,about_Comment_Based_Help
113216,about_CommonParameters
113217,about_Comparison_Operators
113218,about_Continue
113219,about_Core_Commands
113220,about_Data_Section
```

```powershell
$A = Import-Csv -Path .\Links.csv -Header 'LinkID', 'TopicTitle'
$A | Get-Member
```

```Output
   TypeName: System.Management.Automation.PSCustomObject

Name        MemberType   Definition
----        ----------   ----------
Equals      Method       bool Equals(System.Object obj)
GetHashCode Method       int GetHashCode()
GetType     Method       type GetType()
ToString    Method       string ToString()
LinkID      NoteProperty string LinkID=113207
TopicTitle  NoteProperty string TopicTitle=about_Aliases
```

```powershell
$A | Where-Object -Property TopicTitle -Like '*alias*'
```

```Output
LinkID TopicTitle
------ ----------
113207 about_Aliases
```

<span data-ttu-id="07e27-157">Använd värdena som visas i utdata om du vill skapa en Links.csv-fil `Get-Content` .</span><span class="sxs-lookup"><span data-stu-id="07e27-157">To create your Links.csv file, use the values shown in the `Get-Content` output.</span></span>

<span data-ttu-id="07e27-158">`Get-Content`Cmdleten visar Links.csv-filen.</span><span class="sxs-lookup"><span data-stu-id="07e27-158">The `Get-Content` cmdlet displays the Links.csv file.</span></span> <span data-ttu-id="07e27-159">`Import-Csv`Cmdleten importerar Links.csv-filen.</span><span class="sxs-lookup"><span data-stu-id="07e27-159">The `Import-Csv` cmdlet imports the Links.csv file.</span></span> <span data-ttu-id="07e27-160">Parametern **header** anger egenskaps namnen **LinkId** och **TopicTitle**.</span><span class="sxs-lookup"><span data-stu-id="07e27-160">The **Header** parameter specifies the property names **LinkId** and **TopicTitle**.</span></span> <span data-ttu-id="07e27-161">Objekten lagras i `$A` variabeln.</span><span class="sxs-lookup"><span data-stu-id="07e27-161">The objects are stored in the `$A` variable.</span></span> <span data-ttu-id="07e27-162">`Get-Member`Cmdleten visar egenskaps namnen från **rubriken** -parametern.</span><span class="sxs-lookup"><span data-stu-id="07e27-162">The `Get-Member` cmdlet shows the property names from the **Header** parameter.</span></span> <span data-ttu-id="07e27-163">`Where-Object`Cmdleten väljer objekt med egenskapen **TopicTitle** som innehåller **alias**.</span><span class="sxs-lookup"><span data-stu-id="07e27-163">The `Where-Object` cmdlet selects objects with the **TopicTitle** property that includes **alias**.</span></span>

### <span data-ttu-id="07e27-164">Exempel 6: importera en CSV-fil som saknar ett värde</span><span class="sxs-lookup"><span data-stu-id="07e27-164">Example 6: Import a CSV that is missing a value</span></span>

<span data-ttu-id="07e27-165">Det här exemplet visar hur `Import-Csv` cmdleten i PowerShell reagerar när rubrik raden i en CSV-fil innehåller ett null-värde eller ett tomt värde.</span><span class="sxs-lookup"><span data-stu-id="07e27-165">This example shows how the `Import-Csv` cmdlet in PowerShell responds when the header row in a CSV file includes a null or empty value.</span></span> <span data-ttu-id="07e27-166">`Import-Csv` ersätter ett standard namn för den saknade rubrik raden som blir egenskaps namnet för det objekt som `Import-Csv` returneras.</span><span class="sxs-lookup"><span data-stu-id="07e27-166">`Import-Csv` substitutes a default name for the missing header row that becomes the property name of the object that `Import-Csv` returns.</span></span>

```powershell
Get-Content -Path .\Projects.csv
```

```Output
ProjectID,ProjectName,,Completed
13,Inventory,Redmond,True
440,,FarEast,True
469,Marketing,Europe,False
```

```powershell
Import-Csv -Path .\Projects.csv
```

```Output
WARNING: One or more headers were not specified. Default names starting with "H" have been used in place of any missing headers.

ProjectID ProjectName H1      Completed
--------- ----------- --      ---------
13        Inventory   Redmond True
440                   FarEast True
469       Marketing   Europe  False
```

```powershell
(Import-Csv -Path .\Projects.csv).H1
```

```Output
WARNING: One or more headers were not specified. Default names starting with "H" have been used in place of any missing headers.
Redmond
FarEast
Europe
```

<span data-ttu-id="07e27-167">Använd värdena som visas i exemplets utdata om du vill skapa en Projects.csv-fil `Get-Content` .</span><span class="sxs-lookup"><span data-stu-id="07e27-167">To create your Projects.csv file, use the values shown in the example's `Get-Content` output.</span></span>

<span data-ttu-id="07e27-168">`Get-Content`Cmdleten visar Projects.csv-filen.</span><span class="sxs-lookup"><span data-stu-id="07e27-168">The `Get-Content` cmdlet displays the Projects.csv file.</span></span> <span data-ttu-id="07e27-169">Rubrik raden saknar ett värde mellan **ProjectName** och **har slutförts**.</span><span class="sxs-lookup"><span data-stu-id="07e27-169">The header row is missing a value between **ProjectName** and **Completed**.</span></span> <span data-ttu-id="07e27-170">`Import-Csv`Cmdleten importerar Projects.csv-filen och visar ett varnings meddelande eftersom **H1** är ett standard huvud namn.</span><span class="sxs-lookup"><span data-stu-id="07e27-170">The `Import-Csv` cmdlet imports the Projects.csv file and displays a warning message because **H1** is a default header name.</span></span> <span data-ttu-id="07e27-171">`(Import-Csv -Path
.\Projects.csv).H1`Kommandot hämtar värdena för **H1** -egenskapen och visar en varning.</span><span class="sxs-lookup"><span data-stu-id="07e27-171">The `(Import-Csv -Path
.\Projects.csv).H1` command gets the **H1** property values and displays a warning.</span></span>

## <span data-ttu-id="07e27-172">PARAMETRAR</span><span class="sxs-lookup"><span data-stu-id="07e27-172">PARAMETERS</span></span>

### <span data-ttu-id="07e27-173">-Avgränsare</span><span class="sxs-lookup"><span data-stu-id="07e27-173">-Delimiter</span></span>

<span data-ttu-id="07e27-174">Anger den avgränsare som separerar egenskapsvärdena i CSV-filen.</span><span class="sxs-lookup"><span data-stu-id="07e27-174">Specifies the delimiter that separates the property values in the CSV file.</span></span>
<span data-ttu-id="07e27-175">Standardvärdet är komma (,).</span><span class="sxs-lookup"><span data-stu-id="07e27-175">The default is a comma (,).</span></span>

<span data-ttu-id="07e27-176">Ange ett tecken, till exempel ett kolon (:).</span><span class="sxs-lookup"><span data-stu-id="07e27-176">Enter a character, such as a colon (:).</span></span>
<span data-ttu-id="07e27-177">Ange ett semikolon (;) omge det med enkla citat tecken.</span><span class="sxs-lookup"><span data-stu-id="07e27-177">To specify a semicolon (;) enclose it in single quotation marks.</span></span>

<span data-ttu-id="07e27-178">Om du anger ett annat tecken än den faktiska sträng avgränsaren i filen, `Import-Csv` kan inte skapa objekten från CSV-strängarna och returnera CSV-strängarna.</span><span class="sxs-lookup"><span data-stu-id="07e27-178">If you specify a character other than the actual string delimiter in the file, `Import-Csv` cannot create the objects from the CSV strings and will return the CSV strings.</span></span>

```yaml
Type: System.Char
Parameter Sets: DelimiterPath, DelimiterLiteralPath
Aliases:

Required: False
Position: 1
Default value: comma (,)
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="07e27-179">-Encoding</span><span class="sxs-lookup"><span data-stu-id="07e27-179">-Encoding</span></span>

<span data-ttu-id="07e27-180">Anger kodningen för den importerade CSV-filen.</span><span class="sxs-lookup"><span data-stu-id="07e27-180">Specifies the encoding for the imported CSV file.</span></span> <span data-ttu-id="07e27-181">Standardvärdet är `utf8NoBOM`.</span><span class="sxs-lookup"><span data-stu-id="07e27-181">The default value is `utf8NoBOM`.</span></span>

<span data-ttu-id="07e27-182">De acceptabla värdena för den här parametern är följande:</span><span class="sxs-lookup"><span data-stu-id="07e27-182">The acceptable values for this parameter are as follows:</span></span>

- <span data-ttu-id="07e27-183">`ascii`: Använder kodningen för ASCII-teckenuppsättningen (7 bitar).</span><span class="sxs-lookup"><span data-stu-id="07e27-183">`ascii`: Uses the encoding for the ASCII (7-bit) character set.</span></span>
- <span data-ttu-id="07e27-184">`bigendianunicode`: Kodar i UTF-16-format med big-endian byte-ordning.</span><span class="sxs-lookup"><span data-stu-id="07e27-184">`bigendianunicode`: Encodes in UTF-16 format using the big-endian byte order.</span></span>
- <span data-ttu-id="07e27-185">`oem`: Använder standard kodning för MS-DOS-och-konsol program.</span><span class="sxs-lookup"><span data-stu-id="07e27-185">`oem`: Uses the default encoding for MS-DOS and console programs.</span></span>
- <span data-ttu-id="07e27-186">`unicode`: Kodar i UTF-16-format med lite-endian-dataordning.</span><span class="sxs-lookup"><span data-stu-id="07e27-186">`unicode`: Encodes in UTF-16 format using the little-endian byte order.</span></span>
- <span data-ttu-id="07e27-187">`utf7`: Kodar i UTF-7-format.</span><span class="sxs-lookup"><span data-stu-id="07e27-187">`utf7`: Encodes in UTF-7 format.</span></span>
- <span data-ttu-id="07e27-188">`utf8`: Kodar i UTF-8-format.</span><span class="sxs-lookup"><span data-stu-id="07e27-188">`utf8`: Encodes in UTF-8 format.</span></span>
- <span data-ttu-id="07e27-189">`utf8BOM`: Kodar i UTF-8-format med byte ordnings tecken (BOM)</span><span class="sxs-lookup"><span data-stu-id="07e27-189">`utf8BOM`: Encodes in UTF-8 format with Byte Order Mark (BOM)</span></span>
- <span data-ttu-id="07e27-190">`utf8NoBOM`: Kodar i UTF-8-format utan byte ordnings tecken (BOM)</span><span class="sxs-lookup"><span data-stu-id="07e27-190">`utf8NoBOM`: Encodes in UTF-8 format without Byte Order Mark (BOM)</span></span>
- <span data-ttu-id="07e27-191">`utf32`: Kodar i UTF-32-format.</span><span class="sxs-lookup"><span data-stu-id="07e27-191">`utf32`: Encodes in UTF-32 format.</span></span>

<span data-ttu-id="07e27-192">Från och med PowerShell 6,2 tillåter **encoding** -parametern även numeriska ID: n för registrerade tecken tabeller (som `-Encoding 1251` ) eller sträng namn för registrerade tecken tabeller (som `-Encoding "windows-1251"` ).</span><span class="sxs-lookup"><span data-stu-id="07e27-192">Beginning with PowerShell 6.2, the **Encoding** parameter also allows numeric IDs of registered code pages (like `-Encoding 1251`) or string names of registered code pages (like `-Encoding "windows-1251"`).</span></span> <span data-ttu-id="07e27-193">Mer information finns i .NET-dokumentationen för [encoding. codepage](/dotnet/api/system.text.encoding.codepage?view=netcore-2.2).</span><span class="sxs-lookup"><span data-stu-id="07e27-193">For more information, see the .NET documentation for [Encoding.CodePage](/dotnet/api/system.text.encoding.codepage?view=netcore-2.2).</span></span>

```yaml
Type: System.Text.Encoding
Parameter Sets: (All)
Aliases:
Accepted values: ASCII, BigEndianUnicode, OEM, Unicode, UTF7, UTF8, UTF8BOM, UTF8NoBOM, UTF32

Required: False
Position: Named
Default value: UTF8NoBOM
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="07e27-194">– Sidhuvud</span><span class="sxs-lookup"><span data-stu-id="07e27-194">-Header</span></span>

<span data-ttu-id="07e27-195">Anger en alternativ kolumn rubrik rad för den importerade filen.</span><span class="sxs-lookup"><span data-stu-id="07e27-195">Specifies an alternate column header row for the imported file.</span></span> <span data-ttu-id="07e27-196">Kolumn rubriken bestämmer de objekts egenskaps namn som skapats av `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="07e27-196">The column header determines the property names of the objects created by `Import-Csv`.</span></span>

<span data-ttu-id="07e27-197">Ange kolumn rubriker som en kommaavgränsad lista.</span><span class="sxs-lookup"><span data-stu-id="07e27-197">Enter column headers as a comma-separated list.</span></span> <span data-ttu-id="07e27-198">Ange inte rubrik strängen inom citat tecken.</span><span class="sxs-lookup"><span data-stu-id="07e27-198">Do not enclose the header string in quotation marks.</span></span> <span data-ttu-id="07e27-199">Omge varje kolumn rubrik med enkla citat tecken.</span><span class="sxs-lookup"><span data-stu-id="07e27-199">Enclose each column header in single quotation marks.</span></span>

<span data-ttu-id="07e27-200">Om du anger färre kolumn rubriker än det finns data kolumner, ignoreras de återstående data kolumnerna.</span><span class="sxs-lookup"><span data-stu-id="07e27-200">If you enter fewer column headers than there are data columns, the remaining data columns are discarded.</span></span> <span data-ttu-id="07e27-201">Om du anger fler kolumn rubriker än det finns data kolumner skapas de ytterligare kolumn rubrikerna med tomma data kolumner.</span><span class="sxs-lookup"><span data-stu-id="07e27-201">If you enter more column headers than there are data columns, the additional column headers are created with empty data columns.</span></span>

<span data-ttu-id="07e27-202">När du använder parametern **header** tar du bort den ursprungliga rubrik raden från CSV-filen.</span><span class="sxs-lookup"><span data-stu-id="07e27-202">When using the **Header** parameter, delete the original header row from the CSV file.</span></span> <span data-ttu-id="07e27-203">Annars `Import-Csv` skapar ett extra objekt från objekten i rubrik raden.</span><span class="sxs-lookup"><span data-stu-id="07e27-203">Otherwise, `Import-Csv` creates an extra object from the items in the header row.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="07e27-204">-LiteralPath</span><span class="sxs-lookup"><span data-stu-id="07e27-204">-LiteralPath</span></span>

<span data-ttu-id="07e27-205">Anger sökvägen till den CSV-fil som ska importeras.</span><span class="sxs-lookup"><span data-stu-id="07e27-205">Specifies the path to the CSV file to import.</span></span> <span data-ttu-id="07e27-206">Till skillnad från **sökväg** används värdet för parametern **LiteralPath** exakt som det har angetts.</span><span class="sxs-lookup"><span data-stu-id="07e27-206">Unlike **Path** , the value of the **LiteralPath** parameter is used exactly as it is typed.</span></span> <span data-ttu-id="07e27-207">Inga tecken tolkas som jokertecken.</span><span class="sxs-lookup"><span data-stu-id="07e27-207">No characters are interpreted as wildcards.</span></span> <span data-ttu-id="07e27-208">Om sökvägen innehåller escape-tecken omger du den med enkla citat tecken.</span><span class="sxs-lookup"><span data-stu-id="07e27-208">If the path includes escape characters, enclose it in single quotation marks.</span></span> <span data-ttu-id="07e27-209">Enkla citat tecken säger att PowerShell inte tolkar några tecken som escape-sekvenser.</span><span class="sxs-lookup"><span data-stu-id="07e27-209">Single quotation marks tell PowerShell not to interpret any characters as escape sequences.</span></span>

```yaml
Type: System.String[]
Parameter Sets: DelimiterLiteralPath, CultureLiteralPath
Aliases: PSPath, LP

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="07e27-210">-Path</span><span class="sxs-lookup"><span data-stu-id="07e27-210">-Path</span></span>

<span data-ttu-id="07e27-211">Anger sökvägen till den CSV-fil som ska importeras.</span><span class="sxs-lookup"><span data-stu-id="07e27-211">Specifies the path to the CSV file to import.</span></span>
<span data-ttu-id="07e27-212">Du kan också skicka en sökväg till `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="07e27-212">You can also pipe a path to `Import-Csv`.</span></span>

```yaml
Type: System.String[]
Parameter Sets: DelimiterPath, CulturePath
Aliases:

Required: True
Position: 0
Default value: None
Accept pipeline input: True (ByPropertyName, ByValue)
Accept wildcard characters: False
```

### <span data-ttu-id="07e27-213">-UseCulture</span><span class="sxs-lookup"><span data-stu-id="07e27-213">-UseCulture</span></span>

<span data-ttu-id="07e27-214">Använder list avgränsaren för den aktuella kulturen som objekt avgränsare.</span><span class="sxs-lookup"><span data-stu-id="07e27-214">Uses the list separator for the current culture as the item delimiter.</span></span> <span data-ttu-id="07e27-215">Använd följande kommando för att hitta List avgränsaren för en kultur: `(Get-Culture).TextInfo.ListSeparator` .</span><span class="sxs-lookup"><span data-stu-id="07e27-215">To find the list separator for a culture, use the following command: `(Get-Culture).TextInfo.ListSeparator`.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: CulturePath, CultureLiteralPath
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="07e27-216">CommonParameters</span><span class="sxs-lookup"><span data-stu-id="07e27-216">CommonParameters</span></span>

<span data-ttu-id="07e27-217">Denna cmdlet har stöd för parametrarna -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction och -WarningVariable.</span><span class="sxs-lookup"><span data-stu-id="07e27-217">This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable.</span></span> <span data-ttu-id="07e27-218">Mer information finns i [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span><span class="sxs-lookup"><span data-stu-id="07e27-218">For more information, see [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span></span>

## <span data-ttu-id="07e27-219">INDATA</span><span class="sxs-lookup"><span data-stu-id="07e27-219">INPUTS</span></span>

### <span data-ttu-id="07e27-220">System. String</span><span class="sxs-lookup"><span data-stu-id="07e27-220">System.String</span></span>

<span data-ttu-id="07e27-221">Du kan skicka vidare en sträng som innehåller en sökväg till `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="07e27-221">You can pipe a string that contains a path to `Import-Csv`.</span></span>

## <span data-ttu-id="07e27-222">UTDATA</span><span class="sxs-lookup"><span data-stu-id="07e27-222">OUTPUTS</span></span>

### <span data-ttu-id="07e27-223">Objekt</span><span class="sxs-lookup"><span data-stu-id="07e27-223">Object</span></span>

<span data-ttu-id="07e27-224">Denna cmdlet returnerar de objekt som beskrivs av innehållet i CSV-filen.</span><span class="sxs-lookup"><span data-stu-id="07e27-224">This cmdlet returns the objects described by the content in the CSV file.</span></span>

## <span data-ttu-id="07e27-225">ANTECKNINGAR</span><span class="sxs-lookup"><span data-stu-id="07e27-225">NOTES</span></span>

<span data-ttu-id="07e27-226">Eftersom de importerade objekten är CSV-versioner av objekt typen känns de inte igen och formateras inte av de PowerShell-typer som formaterar icke-CSV-versioner av objekt typen.</span><span class="sxs-lookup"><span data-stu-id="07e27-226">Because the imported objects are CSV versions of the object type, they are not recognized and formatted by the PowerShell type formatting entries that format the non-CSV versions of the object type.</span></span>

<span data-ttu-id="07e27-227">Resultatet av ett `Import-Csv` kommando är en samling strängar som utgör ett tabell liknande anpassade objekt.</span><span class="sxs-lookup"><span data-stu-id="07e27-227">The result of an `Import-Csv` command is a collection of strings that form a table-like custom object.</span></span> <span data-ttu-id="07e27-228">Varje rad är en separat sträng, så du kan använda egenskapen **Count** för objektet för att räkna tabell rader.</span><span class="sxs-lookup"><span data-stu-id="07e27-228">Each row is a separate string, so you can use the **Count** property of the object to count the table rows.</span></span> <span data-ttu-id="07e27-229">Kolumnerna är egenskaperna för objektet och objekten i raderna är egenskapsvärdena.</span><span class="sxs-lookup"><span data-stu-id="07e27-229">The columns are the properties of the object and items in the rows are the property values.</span></span>

<span data-ttu-id="07e27-230">Kolumn rubrik raden bestämmer antalet kolumner och kolumn namnen.</span><span class="sxs-lookup"><span data-stu-id="07e27-230">The column header row determines the number of columns and the column names.</span></span> <span data-ttu-id="07e27-231">Kolumn namnen är också namnen på objektets egenskaper.</span><span class="sxs-lookup"><span data-stu-id="07e27-231">The column names are also the names of the properties of the objects.</span></span> <span data-ttu-id="07e27-232">Den första raden tolkas som kolumn rubriker, om du inte använder parametern **header** för att ange kolumn rubriker.</span><span class="sxs-lookup"><span data-stu-id="07e27-232">The first row is interpreted to be the column headers, unless you use the **Header** parameter to specify column headers.</span></span> <span data-ttu-id="07e27-233">Om en rad har fler värden än rubrik raden ignoreras de ytterligare värdena.</span><span class="sxs-lookup"><span data-stu-id="07e27-233">If any row has more values than the header row, the additional values are ignored.</span></span>

<span data-ttu-id="07e27-234">Om kolumn rubrik raden saknar ett värde eller innehåller ett värde som är null eller tomt, `Import-Csv` använder **H** följt av ett tal för kolumn rubriken och egenskaps namnet som saknas.</span><span class="sxs-lookup"><span data-stu-id="07e27-234">If the column header row is missing a value or contains a null or empty value, `Import-Csv` uses **H** followed by a number for the missing column header and property name.</span></span>

<span data-ttu-id="07e27-235">I CSV-filen representeras varje objekt av en kommaavgränsad lista med objektets egenskaps värden.</span><span class="sxs-lookup"><span data-stu-id="07e27-235">In the CSV file, each object is represented by a comma-separated list of the property values of the object.</span></span> <span data-ttu-id="07e27-236">Egenskapsvärdena konverteras till strängar med hjälp av metoden **toString ()** för objektet, så att de representeras av namnet på egenskap svärdet.</span><span class="sxs-lookup"><span data-stu-id="07e27-236">The property values are converted to strings by using the **ToString()** method of the object, so they are represented by the name of the property value.</span></span> <span data-ttu-id="07e27-237">`Export-Csv` exporterar inte objektets metoder.</span><span class="sxs-lookup"><span data-stu-id="07e27-237">`Export-Csv` does not export the methods of the object.</span></span>

<span data-ttu-id="07e27-238">`Import-Csv` stöder även utökat logg format för W3C.</span><span class="sxs-lookup"><span data-stu-id="07e27-238">`Import-Csv` also supports the W3C Extended Log format.</span></span> <span data-ttu-id="07e27-239">Rader som börjar med `#` behandlas som kommentarer och ignoreras om inte kommentaren börjar med `#Fields:` och innehåller en avgränsad lista med kolumn namn.</span><span class="sxs-lookup"><span data-stu-id="07e27-239">Lines starting with `#` are treated as comments and ignored unless the comment starts with `#Fields:` and contains delimited list of column names.</span></span> <span data-ttu-id="07e27-240">I så fall använder cmdleten dessa kolumn namn.</span><span class="sxs-lookup"><span data-stu-id="07e27-240">In that case, the cmdlet uses those column names.</span></span> <span data-ttu-id="07e27-241">Detta är standardformatet för Windows IIS och andra webb server loggar.</span><span class="sxs-lookup"><span data-stu-id="07e27-241">This is the standard format for Windows IIS and other web server logs.</span></span> <span data-ttu-id="07e27-242">Mer information finns i [utökat logg fils format](https://www.w3.org/TR/WD-logfile.html).</span><span class="sxs-lookup"><span data-stu-id="07e27-242">For more information, see [Extended Log File Format](https://www.w3.org/TR/WD-logfile.html).</span></span>

## <span data-ttu-id="07e27-243">RELATERADE LÄNKAR</span><span class="sxs-lookup"><span data-stu-id="07e27-243">RELATED LINKS</span></span>

[<span data-ttu-id="07e27-244">ConvertFrom-CSV</span><span class="sxs-lookup"><span data-stu-id="07e27-244">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)

[<span data-ttu-id="07e27-245">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="07e27-245">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)

[<span data-ttu-id="07e27-246">Exportera-CSV</span><span class="sxs-lookup"><span data-stu-id="07e27-246">Export-Csv</span></span>](Export-Csv.md)

[<span data-ttu-id="07e27-247">Get-Culture</span><span class="sxs-lookup"><span data-stu-id="07e27-247">Get-Culture</span></span>](Get-Culture.md)
